--- a/circle.yml
+++ b/circle.yml
@@ -14,9 +14,9 @@ test:
 
 
 
-notify:
-    webhooks:
-        # canax
-        - url: https://webhooks.gitter.im/e/c8ff44f50de935adf880
-        # canax/MODULE_NAME
-        - url: https://webhooks.gitter.im/e/bc3b7bdf43289a6bb91d
+# notify:
+#     webhooks:
+#         # canax
+#         - url: https://webhooks.gitter.im/e/c8ff44f50de935adf880
+#         # canax/MODULE_NAME
+#         - url: https://webhooks.gitter.im/e/bc3b7bdf43289a6bb91d
