--- a/.travis.yml
+++ b/.travis.yml
@@ -46,10 +46,10 @@ script:
 
 
 
-# notifications:
-#     irc: "irc.freenode.org#dbwebb"
-#     urls:
-#       - https://webhooks.gitter.im/e/6e4660b0024de67de0af
-#     on_success: change  # options: [always|never|change] default: always
-#     on_failure: always  # options: [always|never|change] default: always
-#     on_start: never     # options: [always|never|change] default: always
+notifications:
+    irc: "irc.freenode.org#dbwebb"
+    urls:
+      - https://webhooks.gitter.im/e/3b6b43a7150684b7b982
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
