Fix Scrutinizer to install phpunit.

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -10,6 +10,8 @@ build:
         before:
             -
                 command: "mkdir build"
+        after:
+            - "composer require --dev phpunit/phpunit"
 
     tests:
         override:
