--- a/composer.json
+++ b/composer.json
@@ -21,17 +21,11 @@
             "Anax\\": "src/"
         }
     },
+    "minimum-stability": "beta",
+    "prefer-stable": true,
     "require": {
-        "php": ">=7.0",
-        "anax/configure": "^1.0",
-        "anax/di": "^1.0",
-        "anax/page": "^1.0",
-        "anax/response": "^1.0",
-        "anax/request": "^1.0",
-        "anax/router": "^1.0",
-        "anax/session": "^1.0",
-        "anax/textfilter": "^1.0",
-        "anax/url": "^1.0",
-        "anax/view": "^1.0"
+        "php": ">=7.2",
+        "anax/anax-lite": "^1.0.24",
+        "anax/textfilter": "^1.2.3",
     }
 }
