Try outSonarQube with travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,17 @@ matrix:
         - php: nightly
         - php: hhvm
 
+addons:
+    sonarcloud:
+        organization: "canax"
+        # token:
+        #    secure: ********* # encrypted value of your token
+  
 before_script:
     - make install
 
 script:
+    - sonar-scanner
     - make check
     - make test
 
