--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "anax/commons": "^2.0.0@beta"
     },
     "require-dev": {
+        "phpmetrics/phpmetrics": "^2",
         "phpunit/phpunit": "^7",
         "anax/anax-lite": "^1.0.24"
     }
