--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,12 @@
     "minimum-stability": "beta",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.2",
-        "anax/commons": "^2.0.0@beta"
+        "php": ">=7.4",
+        "anax/commons": "^2.0.14"
     },
     "require-dev": {
         "phpmetrics/phpmetrics": "^2",
         "phpunit/phpunit": "^7",
-        "anax/anax-lite": "^1.0.24"
+        "anax/anax": "^1.0"
     }
 }
